# mercury

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  phase-8-session-4-review.md
docs/: GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  MILESTONE_1_TESTS.md  operator-guide.md  release-runbook.md
scripts/: audit.sh  check-bundle-size.sh  dev.sh  generate-certs.sh  prod-start.sh  release.sh  reset-db.sh  test-all.sh  test-integration.sh  test_milestone_02.sh
specs/: MILESTONE_1_TESTS.md  TESTSPEC.md  TEST_AUDIT.md  channel-type-selector.md  client-spec.md  phase-6b-server.md  phase-6e-identity-recovery.md  phase-7-e2e-message-routing.md  phase-7b-client-e2e-dm-messaging.md  phase-7c-private-channel-e2e.md  phase-8-s02-client-webrtc-manager.md  phase-8-s03-insertable-streams.md  phase-8-s04-voice-video-ui.md  phase-8-sfu-media-engine.md  phase-9-s4-moderation-dashboard.md  runtime-server-url.md  server-spec.md
src/client/: electron-builder.config.yml  electron.vite.config.ts  package.json  playwright.bench.config.ts  playwright.config.ts  pnpm-lock.yaml  review.md  tsconfig.json  vitest.bench.config.ts  vitest.config.ts  vitest.integration.config.ts
src/client/resources/: icon.icns
src/client/scripts/: test-native.sh
src/client/src/main/: index.ts  safe-storage.ts  tray.ts  updater.ts
src/client/src/main/workers/: crypto-worker-entry.ts
src/client/src/preload/: index.ts
src/client/src/renderer/: App.tsx  index.html  main.tsx  styles.css
src/client/src/renderer/pages/: LoginPage.tsx  RegisterPage.tsx  ServerConnectPage.tsx  ServerPage.tsx
src/client/src/renderer/services/: active-speaker.ts  api.ts  audio-cues.ts  crypto.ts  frame-crypto.ts  ice-diagnostics.ts  media-key-ring.ts  serverUrl.ts  webrtc.ts  websocket.ts
src/client/src/renderer/stores/: authStore.ts  callStore.ts  dmChannelStore.ts  messageStore.ts  moderationStore.ts  presenceStore.ts  serverStore.ts
src/client/src/renderer/types/: api.ts  call.ts  models.ts  ws.ts
src/client/src/shared/: ipc-channels.ts  ipc-types.ts
src/client/src/worker/crypto/: backup.ts  bip39-wordlist.ts  device-list.ts  double-ratchet.ts  key-bundle-service.ts  keygen.ts  recovery.ts  safety-numbers.ts  sender-keys.ts  types.ts  utils.ts  x3dh.ts
src/client/src/worker/store/: encryption.ts  keystore.ts  messages.db.ts
src/client/test-results/: .last-run.json
src/client/test-results/flows-recovery-flow-Recove-fd8a8-end-new-E2E-messages-to-Bob/: error-context.md
src/client/test-results/flows-smoke-create-channel-and-it-appears-in-channel-list/: error-context.md
src/client/test-results/flows-smoke-register-new-account-and-land-on-main-UI/: error-context.md
src/client/tests/e2e/flows/: dm-messaging.test.ts  electron-security.test.ts  moderation.test.ts  private-channel.test.ts  recovery-flow.test.ts  smoke.test.ts  voice-channel.test.ts
src/client/tests/integration/: worker.test.ts
src/client/tests/performance/: benchmarks.test.ts  bundle.test.ts  cpu-idle.test.ts  launch.test.ts  memory.test.ts
src/client/tests/unit/components/: call-indicators.test.ts  moderation-dashboard.test.ts  moderation.test.ts  video-grid.test.ts  voice-panel.test.ts
src/client/tests/unit/crypto/: device-list.test.ts  double-ratchet.test.ts  key-bundle-service.test.ts  keygen.test.ts  recovery.test.ts  safety-numbers.test.ts  sender-keys.test.ts  utils.test.ts  x3dh.test.ts
src/client/tests/unit/services/: active-speaker.test.ts  api.test.ts  ice-diagnostics.test.ts  media-encryption.test.ts  msgpack-framing.test.ts  websocket.test.ts
src/client/tests/unit/store/: backup.test.ts  keystore.test.ts  messages.test.ts  tofu.test.ts
src/client/tests/unit/stores/: authStore.test.ts  callStore.test.ts  dmChannelStore.test.ts  dmMessageStore.test.ts  messageStore.test.ts  moderation-ws-events.test.ts  (+3 more)
src/server/: Cargo.toml
src/server/.config/: nextest.toml
src/server/benches/: server_benchmarks.rs
src/server/config/: default.toml
src/server/crates/mercury-api/: Cargo.toml
src/server/crates/mercury-api/src/: abuse_detector.rs  extractors.rs  lib.rs  metrics.rs  middleware.rs  router.rs  state.rs
src/server/crates/mercury-api/src/handlers/: auth.rs  calls.rs  channels.rs  devices.rs  dm.rs  identity.rs  messages.rs  mod.rs  moderation.rs  sender_keys.rs  servers.rs  users.rs  websocket.rs
src/server/crates/mercury-api/src/ws/: connection.rs  manager.rs  mod.rs  presence.rs  protocol.rs  rate_limiter.rs  sfu_events.rs
src/server/crates/mercury-auth/: Cargo.toml
src/server/crates/mercury-auth/src/: jwt.rs  lib.rs  password.rs  session.rs  turn.rs
src/server/crates/mercury-core/: Cargo.toml
src/server/crates/mercury-core/src/: config.rs  error.rs  ids.rs  lib.rs  models.rs
src/server/crates/mercury-crypto/: Cargo.toml
src/server/crates/mercury-crypto/src/: backup.rs  device_list.rs  lib.rs  verify.rs
src/server/crates/mercury-db/: Cargo.toml
src/server/crates/mercury-db/src/: channels.rs  device_lists.rs  devices.rs  dm_channels.rs  lib.rs  messages.rs  pool.rs  servers.rs  users.rs
src/server/crates/mercury-media/: Cargo.toml
src/server/crates/mercury-media/src/: lib.rs  room.rs  runtime.rs  types.rs
src/server/crates/mercury-moderation/: Cargo.toml
src/server/crates/mercury-moderation/src/: abuse.rs  audit.rs  bans.rs  blocks.rs  lib.rs  mutes.rs  reports.rs
src/server/crates/mercury-server/: Cargo.toml
src/server/crates/mercury-server/src/: lib.rs  main.rs
src/server/migrations/: 001_create_users.sql  002_create_servers_channels.sql  003_create_messages.sql  004_create_devices_and_keys.sql  005_create_moderation.sql  006_add_signed_prekey_id.sql  007_add_x3dh_header.sql  008_create_channel_members.sql  009_add_dm_policy.sql
src/server/tests/: README.md  api_tests.rs  channel_types.rs  db_tests.rs  milestone_1.rs  phase_10.rs  phase_5.rs  phase_6b.rs  phase_6e.rs  phase_7.rs  phase_8.rs  phase_9a.rs  phase_9b.rs  security_tests.rs  unit_tests.rs  ws_tests.rs
src/server/tests/common/: mod.rs
(+35 files in other folders)
