[workspace]
resolver = "2"
members = [
    "crates/mercury-server",
    "crates/mercury-api",
    "crates/mercury-core",
    "crates/mercury-db",
    "crates/mercury-auth",
    "crates/mercury-crypto",
    "crates/mercury-media",
    "crates/mercury-moderation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }

# Concurrency
dashmap = "6"
futures-util = "0.3"
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Redis
fred = "9"

# Cryptography
ring = "0.17"
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Configuration
toml = "0.8"

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# Testing
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls"] }

# CPU affinity
core_affinity = "0.8"

# WebRTC
str0m = { version = "0.16", default-features = false, features = ["rust-crypto"] }

# Workspace crates
mercury-core = { path = "crates/mercury-core" }
mercury-db = { path = "crates/mercury-db" }
mercury-auth = { path = "crates/mercury-auth" }
mercury-api = { path = "crates/mercury-api" }
mercury-crypto = { path = "crates/mercury-crypto" }
mercury-media = { path = "crates/mercury-media" }
mercury-moderation = { path = "crates/mercury-moderation" }
