[package]
name = "mercury-api"
version.workspace = true
edition.workspace = true

[dependencies]
mercury-core.workspace = true
mercury-db.workspace = true
mercury-auth.workspace = true
mercury-media.workspace = true
mercury-moderation.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
fred.workspace = true
rand.workspace = true
base64.workspace = true
sqlx.workspace = true
dashmap.workspace = true
futures-util.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
