[package]
name = "mercury-auth"
version.workspace = true
edition.workspace = true

[dependencies]
mercury-core.workspace = true
mercury-db.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
base64.workspace = true
ring.workspace = true
uuid.workspace = true
chrono.workspace = true
fred.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
