[package]
name = "mercury-media"
version.workspace = true
edition.workspace = true

[dependencies]
mercury-core.workspace = true
mercury-auth.workspace = true
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
core_affinity.workspace = true
str0m.workspace = true
metrics.workspace = true
