[package]
name = "mercury-moderation"
version.workspace = true
edition.workspace = true

[dependencies]
mercury-core.workspace = true
mercury-db.workspace = true
sqlx.workspace = true
fred = "9"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
