[package]
name = "mercury-server"
version.workspace = true
edition.workspace = true

[lib]
name = "mercury_server"
path = "src/lib.rs"

[[bin]]
name = "mercury-server"
path = "src/main.rs"

[[test]]
name = "milestone_1"
path = "../../tests/milestone_1.rs"

[[test]]
name = "phase_5"
path = "../../tests/phase_5.rs"

[[test]]
name = "phase_6b"
path = "../../tests/phase_6b.rs"

[[test]]
name = "phase_6e"
path = "../../tests/phase_6e.rs"

[[test]]
name = "phase_7"
path = "../../tests/phase_7.rs"

[[test]]
name = "phase_8"
path = "../../tests/phase_8.rs"

[[test]]
name = "phase_9a"
path = "../../tests/phase_9a.rs"

[[test]]
name = "phase_9b"
path = "../../tests/phase_9b.rs"

[dependencies]
mercury-core.workspace = true
mercury-api.workspace = true
mercury-db.workspace = true
mercury-auth.workspace = true
mercury-media.workspace = true
sqlx.workspace = true

# Allocator
tikv-jemallocator = "0.6"

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true

# TLS
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Config
toml.workspace = true
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Redis
fred.workspace = true

# Hyper for low-level TLS serving
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
reqwest.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
futures-util.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
rmpv.workspace = true
rmp-serde.workspace = true
serde_bytes.workspace = true
ring = "0.17"
mercury-auth.workspace = true
mercury-moderation.workspace = true
